--- a/index.html
+++ b/index.html
@@ -2240,8 +2240,22 @@
                             </div>
                         </div>
                     </div>
+
                     <div class="contact-form">
-                        <form id="contactForm">
+
+                        <h3 style="color: var(--primary); margin-bottom: 30px;">
+                            Send a Message
+                        </h3>
+
+                        <!-- Dynamics 365 Marketing Embedded Form -->
+                        <div data-form-id="c23b1ec1-6106-f111-8407-7ced8d745d51" data-form-api-url="https://public-eur.mkt.dynamics.com/api/v1.0/orgs/377f7dd7-e701-f111-8c79-002248a15041/landingpageforms%22
+        data-cached-form-url="
+                            https://assets-eur.mkt.dynamics.com/377f7dd7-e701-f111-8c79-002248a15041/digitalassets/forms/c23b1ec1-6106-f111-8407-7ced8d745d51%22>
+                        </div>
+
+                        <script
+                            src="https://cxppusa1formui01cdnsa01-endpoint.azureedge.net/eur/FormLoader/FormLoader.bundle.js"></script>
+                        <!-- <form id="contactForm">
                             <div class="form-group">
                                 <input type="text" class="form-control" placeholder="Your Name" required>
                             </div>
@@ -2255,8 +2269,9 @@
                                 <textarea class="form-control" placeholder="Your Message" required></textarea>
                             </div>
                             <button type="submit" class="submit-btn">Send Message</button>
-                        </form>
+                        </form> -->
                     </div>
+
                 </div>
             </div>
         </section>
