--- a/index.html
+++ b/index.html
@@ -1820,7 +1820,7 @@
                     <!-- Personal details -->
                     <div class="personal-details">
                         <!-- UPDATED: Name with more purple -->
-                        <h1 class="name">Qamar Zaman</h1>
+                        <h1 class="name">Qamar Zaman Bangash</h1>
                         <h2 class="job-title">Microsoft Dynamics 365 CRM<span> Developer</span></h2>
                         <p class="description">
                             Microsoft Dynamics 365 CRM Developer with expertise in C#, .NET, JavaScript, SQL, and Power
