--- a/index.html
+++ b/index.html
@@ -1820,7 +1820,7 @@
                     <!-- Personal details -->
                     <div class="personal-details">
                         <!-- UPDATED: Name with more purple -->
-                        <h1 class="name">Qamar Zaman Bangash</h1>
+                        <h1 class="name">Qamar Zaman</h1>
                         <h2 class="job-title">Microsoft Dynamics 365 CRM<span> Developer</span></h2>
                         <p class="description">
                             Microsoft Dynamics 365 CRM Developer with expertise in C#, .NET, JavaScript, SQL, and Power
@@ -2255,7 +2255,7 @@
                         <script
                             src="https://cxppusa1formui01cdnsa01-endpoint.azureedge.net/eur/FormLoader/FormLoader.bundle.js"></script> -->
 
-                        <form id="contactForm">
+                        <!-- <form id="contactForm">
                             <div class="form-group">
                                 <input type="text" class="form-control" placeholder="Your Name" required>
                             </div>
@@ -2269,7 +2269,7 @@
                                 <textarea class="form-control" placeholder="Your Message" required></textarea>
                             </div>
                             <button type="submit" class="submit-btn">Send Message</button>
-                        </form>
+                        </form> -->
                     </div>
 
                 </div>
