--- a/index.html
+++ b/index.html
@@ -2243,7 +2243,7 @@
 
                     <div class="contact-form">
 
-                        <!-- <h3 style="color: var(--primary); margin-bottom: 30px;">
+                        <h3 style="color: var(--primary); margin-bottom: 30px;">
                             Send a Message
                         </h3>
 
@@ -2253,7 +2253,7 @@
                         </div>
 
                         <script
-                            src="https://cxppusa1formui01cdnsa01-endpoint.azureedge.net/eur/FormLoader/FormLoader.bundle.js"></script> -->
+                            src="https://cxppusa1formui01cdnsa01-endpoint.azureedge.net/eur/FormLoader/FormLoader.bundle.js"></script>
 
                         <!-- <form id="contactForm">
                             <div class="form-group">
