--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 <body>
     <div class="container">
-        <h3>Send a Message</h3>
+        <h3>Register Now</h3>
         <div class="form-wrapper">
             <!-- Dynamics 365 Marketing Form -->
             <div data-form-id="c23b1ec1-6106-f111-8407-7ced8d745d51"
