--- a/index.html
+++ b/index.html
@@ -37,17 +37,20 @@
 <body>
     <div class="container">
         <h3>Register Now</h3>
+
         <div class="form-wrapper">
             <!-- Dynamics 365 Marketing Form -->
-            <div data-form-id="c23b1ec1-6106-f111-8407-7ced8d745d51"
-                data-form-api-url="https://public-eur.mkt.dynamics.com/api/v1.0/orgs/377f7dd7-e701-f111-8c79-002248a15041/landingpageforms"
-                data-cached-form-url="https://assets-eur.mkt.dynamics.com/377f7dd7-e701-f111-8c79-002248a15041/digitalassets/forms/c23b1ec1-6106-f111-8407-7ced8d745d51">
+            <div data-form-id='430d2062-5f0d-f111-8407-000d3ab38362'
+                data-form-api-url='https://public-eur.mkt.dynamics.com/api/v1.0/orgs/377f7dd7-e701-f111-8c79-002248a15041/landingpageforms'
+                data-cached-form-url='https://assets-eur.mkt.dynamics.com/377f7dd7-e701-f111-8c79-002248a15041/digitalassets/forms/430d2062-5f0d-f111-8407-000d3ab38362'>
             </div>
         </div>
     </div>
+    </div>
 
     <!-- Script to load Dynamics form -->
-    <script src="https://cxppusa1formui01cdnsa01-endpoint.azureedge.net/eur/FormLoader/FormLoader.bundle.js"></script>
+    <script src='https://cxppusa1formui01cdnsa01-endpoint.azureedge.net/eur/FormLoader/FormLoader.bundle.js'></script>
+
 </body>
 
 </html>
